# imageboard-downloader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: test_list_e621.json
assets/sample_post_lists/: test_list_danbooru.json  test_list_e621.json  test_list_gb.json  test_list_konachan.json  test_list_r34.json  test_list_rb.json
benches/: post_filter.rs  post_mapper.rs
danbooru_downloader/: Cargo.toml
danbooru_downloader/src/: downloader.rs  main.rs
danbooru_downloader/src/danbooru/: downloader.rs  mod.rs
danbooru_downloader/src/imageboards/: mod.rs
danbooru_downloader/src/imageboards/danbooru/: mod.rs
docs/: CBZ.md  Global Blacklist.md  Global_Blacklist.md  README.md  Updater.md
ibdl-cli/: Cargo.toml
ibdl-cli/src/: error.rs  lib.rs
ibdl-cli/src/cli/: extra.rs  mod.rs
ibdl-cli/src/cli/commands/: pool.rs  post.rs  search.rs
ibdl-cli/src/progress_bars/: mod.rs
ibdl-common/: Cargo.toml
ibdl-common/src/: cli.rs  lib.rs  macros.rs
ibdl-common/src/auth/: mod.rs
ibdl-common/src/post/: error.rs  extension.rs  mod.rs  rating.rs  tags.rs
ibdl-core/: Cargo.toml
ibdl-core/src/: cli.rs  error.rs  lib.rs  progress.rs
ibdl-core/src/async_queue/: cbz.rs  folder.rs  mod.rs  summary.rs
ibdl-core/src/cli/: extra.rs  mod.rs
ibdl-core/src/cli/commands/: mod.rs  pool.rs  post.rs  search.rs
ibdl-core/src/progress_bars/: mod.rs
ibdl-core/src/queue/: mod.rs  summary.rs
ibdl-extractors/: Cargo.toml
ibdl-extractors/src/: blacklist.rs  error.rs  lib.rs  prelude.rs  test.rs
ibdl-extractors/src/auth/: mod.rs
ibdl-extractors/src/blacklist/: blacklist.toml  mod.rs
ibdl-extractors/src/extractor/: common.rs  mod.rs
ibdl-extractors/src/extractor/caps/: mod.rs
ibdl-extractors/src/extractor_config/: macros.rs  mod.rs  sample.toml  serialize.rs
ibdl-extractors/src/imageboards/: mod.rs  prelude.rs
ibdl-extractors/src/imageboards/danbooru/: mod.rs  models.rs  pool.rs  unsync.rs
ibdl-extractors/src/imageboards/e621/: mod.rs  models.rs  pool.rs  unsync.rs
ibdl-extractors/src/imageboards/gelbooru/: mod.rs  models.rs  unsync.rs
ibdl-extractors/src/imageboards/gelbooru/gelbooru_old/: mod.rs  unsync.rs
ibdl-extractors/src/imageboards/moebooru/: mod.rs  models.rs  unsync.rs
ibdl-extractors/src/websites/: mod.rs
ibdl-extractors/src/websites/danbooru/: mod.rs  models.rs  pool.rs  unsync.rs
ibdl-extractors/src/websites/e621/: mod.rs  models.rs  pool.rs  unsync.rs
ibdl-extractors/src/websites/gelbooru/: mod.rs  unsync.rs
ibdl-extractors/src/websites/moebooru/: mod.rs  unsync.rs
ibdl-wasm/: Cargo.toml
ibdl-wasm-gui/: Cargo.toml
ibdl-wasm-gui/src/: lib.rs
ibdl-wasm/src/: lib.rs
ibdl-wasm/wasm-example/www_frontend/: app.js  index.html
sfa/: Cargo.toml
sfa/src/: lib.rs
sfa/src/headers/: mod.rs  sarf.rs
src/: async_path.rs  cli_utils.rs  default_path.rs  lib.rs  main.rs  model_structs.rs  requests.rs  utils.rs
src/auth/: mod.rs
src/config/: mod.rs
src/imageboards/: auth.rs  blacklist.rs  common.rs  error.rs  macros.rs  mod.rs  post.rs  queue.rs  rating.rs
src/imageboards/auth/: mod.rs
src/imageboards/danbooru/: auth.rs  mod.rs  model_structs.rs  models.rs
src/imageboards/e621/: auth.rs  mod.rs  models.rs
src/imageboards/extractors/: blacklist.rs  error.rs  mod.rs
src/imageboards/extractors/danbooru/: mod.rs
src/imageboards/extractors/e621/: mod.rs  models.rs
src/imageboards/extractors/gelbooru/: mod.rs
src/imageboards/extractors/moebooru/: mod.rs
src/imageboards/gelbooru/: mod.rs
src/imageboards/konachan/: mod.rs
src/imageboards/moebooru/: mod.rs  models.rs
src/imageboards/post/: error.rs  mod.rs  rating.rs
src/imageboards/queue/: blacklist.rs  error.rs  mod.rs  summary.rs
src/imageboards/realbooru/: mod.rs
src/imageboards/rule34/: mod.rs  models.rs
src/progress_bars/: mod.rs
