[workspace]
members = ["ibdl-common", "ibdl-core", "ibdl-extractors"]

[package]
name = "imageboard_downloader"
authors = ["Ferrah Aiko Wolf <ferrahwolfeh@proton.me>"]
version = "1.2.0"
edition = "2021"
description = "Cli utility to bulk download images from popular imageboard sites (Boorus) using their APIs"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/imageboard_downloader"
keywords = ["download", "api", "e621", "danbooru", "rule34"]
categories = ["command-line-utilities", "multimedia::images"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
anyhow = "1.0.60"
spinoff = "0.5.4"
ibdl-core = { path = "./ibdl-core" }
ibdl-extractors = { path =  "./ibdl-extractors" }
ibdl-common = { path = "./ibdl-common" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"]}
rand = "0.8.5"

[[bench]]
name = "post_filter"
harness = false

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = false

[profile.opttest]
inherits = "release"
lto = false
opt-level = 3
strip = false
debug = true
