[workspace]
members = ["ibdl-common", "ibdl-core", "ibdl-extractors"]

[package]
name = "imageboard_downloader"
authors = ["Ferrah Aiko Wolf <ferrahwolfeh@proton.me>"]
version = "1.6.0"
edition = "2021"
description = "Cli utility to bulk download images from popular imageboard sites (Boorus) using their APIs"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/imageboard_downloader"
keywords = ["download", "api", "e621", "danbooru", "rule34"]
categories = ["command-line-utilities", "multimedia::images"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
spinoff = "0.8.0"
ibdl-core = { version = "1.6.0", path = "./ibdl-core" }
ibdl-extractors = { version = "1.7.0", path = "./ibdl-extractors" }
ibdl-common = { version = "1.5.0", path = "./ibdl-common" }
color-eyre = "0.6.2"
once_cell = "1.18.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
ahash = { version = "0.8.3", features = ["serde"] }
rand = "0.8.5"

[[bench]]
name = "post_filter"
harness = false

[[bench]]
name = "post_mapper"
harness = false

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = false

[profile.opttest]
inherits = "release"
lto = false
opt-level = 3
strip = false
debug = true
