[workspace]
members = [
    "ibdl-cli",
    "ibdl-common",
    "ibdl-core",
    "ibdl-extractors",
    #"ibdl-wasm-gui",
]

[package]
name = "imageboard_downloader"
authors = ["Ferrah Aiko Wolf <ferrahwolfeh@proton.me>"]
version = "1.8.0"
edition = "2024"
description = "Cli utility to bulk download images from popular imageboard sites (Boorus) using their APIs"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/imageboard_downloader"
keywords = ["download", "api", "e621", "danbooru", "rule34"]
categories = ["command-line-utilities", "multimedia::images"]
include = ["**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
ibdl-core = { version = "1.7.1", path = "./ibdl-core" }
ibdl-extractors = { version = "1.9.0", path = "./ibdl-extractors" }
ibdl-common = { version = "1.8.1", path = "./ibdl-common" }
ibdl-cli = { path = "./ibdl-cli" }
color-eyre = "0.6.5"
once_cell = "1.21.3"
dialoguer = "0.11.0"
tokio = { version = "1", features = ["full"] }

[features]
cbz = [
    "ibdl-cli/cbz",
] # The binary's 'cbz' feature enables 'ibdl-cli's 'cbz' feature


[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = false

[profile.opttest]
inherits = "release"
lto = false
opt-level = 3
strip = false
debug = true
