[package]
name = "ibdl-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "cargo"] }
indicatif = "0.17.11"
ibdl-common = { version = "1.8.1", path = "../ibdl-common" }
ibdl-extractors = { version = "1.10.0", path = "../ibdl-extractors" }
ibdl-core = { version = "1.7.1", path = "../ibdl-core" }
dialoguer = "0.11.0"
thiserror = "2.0.12"
owo-colors = "4.2.1"
once_cell = "1.21.3"

[features]
cbz = ["ibdl-core/cbz"] # ibdl-cli cbz feature depends on ibdl-core cbz feature
