[package]
name = "ibdl-common"
version = "1.2.3"
edition = "2021"
description = "Common functions and data structs for parsing and downloading posts from imageboards"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
directories = "4.0.1"
md5 = "0.7.0"
thiserror = "1.0.32"
thiserror-impl = "1.0.32"
serde_json = "1.0.83"
zstd = "0.12.1"
bincode = "1.3.3"


[dependencies.tokio]
version = "1"
features = ["macros", "fs", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.151"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "stream", "rustls-tls"]
