[package]
name = "ibdl-common"
version = "1.8.1"
edition = "2021"
description = "Common functions and data structs for parsing and downloading posts from imageboards"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.25"
directories = "6.0.0"
thiserror = "2.0.11"
serde_json = "1.0.137"
bincode = "1.3.3"


[dependencies.tokio]
version = "1"
features = ["macros", "fs", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["json", "stream", "rustls-tls"]
