[package]
name = "ibdl-core"
version = "1.3.2"
edition = "2021"
description = "Main download infrastructure for imageboard_downloader"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.6"
ibdl-common = { version = "1.3.1", path = "../ibdl-common" }
thiserror = "1.0.47"
thiserror-impl = "1.0.47"
bytes = "1.4.0"
futures = "0.3.28"
md5 = "0.7.0"
tokio-stream = "0.1.14"
owo-colors = "3.5.0"
once_cell = "1.18.0"

[dependencies.chrono]
version = "0.4.27"
features = ["serde"]

[dependencies.clap]
version = "4.4.1"
features = ["derive", "cargo"]

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate", "time"]
