[package]
name = "ibdl-core"
version = "1.6.2"
edition = "2021"
description = "Main download infrastructure for imageboard_downloader"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
ibdl-common = { version = "1.6.0", path = "../ibdl-common" }
ibdl-extractors = { version = "1.8.0", path = "../ibdl-extractors" }
thiserror = "1.0"
thiserror-impl = "1.0"
bytes = "1.5.0"
futures = "0.3"
md5 = "0.7.0"
tokio-stream = "0.1.14"
owo-colors = "4.0.0"
once_cell = "1.19.0"
dialoguer = "0.11.0"


[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "4.4"
features = ["derive", "cargo"]

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate", "time"]
