[package]
name = "ibdl-extractors"
version = "1.7.0"
edition = "2021"
description = "Imageboard post extractors used in imageboard_downloader"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-extractors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibdl-common = { version = "1.5.0", path = "../ibdl-common" }
thiserror = "1.0.47"
thiserror-impl = "1.0.47"
async-trait = "0.1.73"
rayon = "1.7.0"
toml = "0.8.8"


[dependencies.ahash]
version = "0.8.2"
features = ["serde"]
