[package]
name = "ibdl-extractors"
version = "1.9.0"
edition = "2021"
rust-version = "1.75"
description = "Imageboard post extractors used in imageboard_downloader"
license = "MIT"
repository = "https://gitlab.com/FerrahWolfeh/imageboard-downloader-rs"
documentation = "https://docs.rs/ibdl-extractors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibdl-common = { version = "1.8.0", path = "../ibdl-common" }
thiserror = "2.0.11"
toml = "0.8.19"
once_cell = "1.19"
directories = "6.0.0"
bitflags = "2.8.0"


[dependencies.ahash]
version = "0.8.2"
features = ["serde"]
