[package]
name = "ibdl-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # cdylib for WASM, rlib for potential Rust testing

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5" # For easy conversion between Rust structs and JsValue
js-sys = "0.3.77" # For JavaScript types like Promise

# Your project's crates (adjust paths as necessary)
# Ensure these crates themselves are WASM-compatible or their features used are.
ibdl-common = { path = "../ibdl-common" } # Assuming ibdl-wasm-ui is a sibling to ibdl-common, etc.
ibdl-extractors = { path = "../ibdl-extractors" }

# For better panic messages in the browser console (optional, but good for dev)

# For async tasks in WASM
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tokio = { version = "1.45.1", features = ["time"] }
reqwest = "0.12.19"
urlencoding = "2.1.3"

[features]
default = []
