[package]
name = "sfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
log = "0.4.17"
env_logger = "0.9.0"
bincode = "1.3.3"
zstd = "0.11.2+zstd.1.5.2"
md5 = "0.7.0"
sha256 = "1.0.3"

[dependencies.serde]
version = "1.0.142"
features = ["derive"]

[dependencies.image]
version = "0.24.3"
features = ["avif"]